III-1140: Consistent label path naming
